fixing the jump function for obstacle george and fixing counter

--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,6 @@ body {
 
 #george{
     position: absolute;
-    bottom: 0;
-    
 }
 
 #george img{
